--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -7,7 +7,7 @@
  <display-name>Books Management</display-name>
  <context-param>
   <param-name>jdbcURL</param-name>
-  <param-value>jdbc:mysql://localhost:3306/book_store</param-value>
+  <param-value>jdbc:mysql://127.0.0.1:3306/book_store</param-value>
  </context-param>
  
  <context-param>
